--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -2,96 +2,189 @@
   type: map
   contents:
     - name: Full Name
-      value: Albert Einstein
+      value: Anis Mohamed HADDOUCHE
     - name: Date of Birth
-      value: 14th March 1879
+      value: 17th January 1988
+    - name : Actual position
+      value : R&D Engineer at IMT Atlantique
+    - name : Email
+      value :  <a href="mailto:mohamed.anis.haddouche@gmail.com">mohamed.anis.haddouche@gmail.com</a>
+    - name : Phone
+      value : +33 766 552 073
+    - name : Localisation
+      value : Brest, France
     - name: Languages
-      value: English, German
+      value: Arabic, French and English  
 
 - title: Education
   type: time_table
   contents:
-    - title: PhD
-      institution: University of Zurich, Zurich, Switzerland
-      year: 1905
+    - title: PhD in Applied Mathematics 
+      institution: Université de Rouen Normandie & <a href="https://www.enssea.net/fr/"> ENSSEA </a> 
+      year: 2019
       description:
-        - Description 1.
-        - Description 2.
-        - title: Description 3.
-          contents:
-            - Sub-description 1.
-            - Sub-description 2.
-    - title: Federal teaching diploma
-      institution: Eidgenössische Technische Hochschule, Zurich, Switzerland
-      year: 1900
+        - <a href="https://tel.archives-ouvertes.fr/tel-02376077">Estimation d'une matrice d'échelle </a>
+        - Supervised by <a href="https://www.researchgate.net/profile/Dominique-Fourdrinier">Dominique Fourdrinier</a> and <a href="https://www.researchgate.net/profile/Fatiha-Mezoued">Fatiha Mezoued</a>
+
+    - title: Master degree in stochastic modeling and forecasting in operations research
+      institution: Université des Sciences et de la Technologie  Houari-Boumédiène (<a href="http://www.usthb.dz">USTHB</a>) 
+      year: 2014
       description:
-        - Description 1.
-        - Description 2.
+        - <a href="https://github.com/AnisHdd/anismhaddouche/blob/master/assets/pdf/A-M_Haddouche_Master.pdf">Research internship in stochastic volatility models classical and Bayesian estimation </a>
+        
+
+    - title: Bachelor's degree in statistics
+      institution: <a href="http://www.usthb.dz">USTHB</a> 
+      year: 2012
+      description:
+        - Research internship in Markov chain Monte Carlo (MCMC) method and variance reduction techniques
+        
+
 
 - title: Experience
   type: time_table
   contents:
-    - title: Professor of Theoretical Physics
-      institution: Institute for Advanced Study, Princeton University
-      year: 1933 - 1955
+    - title: Research & Development Engineer 
+      institution: IMT Atlantique, LABSTICC, <a href="https://labsticc.fr/fr/equipes/motel">MOTEL</a>  
+      year: Sep 2021 - To date
       description:
-        - Description 1.
-        - Description 2.
-        - title: Description 3.
-          contents:
-            - Sub-description 1.
-            - Sub-description 2.
-    - title: Visiting Professor
-      institution: California Institute of Technology, Pasadena, California, US
-      year: 1933
+        - Implementation of algorithms for the design of collaboration indicators on text documents (NLP)
+        - Building  a neural network model (with SpaCy) to extract mathematical formulas from textual documents
+        - Dashboards design and implementation
+
+    - title: Mentor (Freelance)
+      institution:  <a href="https://openclassrooms.com/fr/">Openclassrooms</a>  
+      year: Dec 2021 - To date
       description:
-        - Description 1.
-        - Description 2.
+        - Monitoring students (three for the moment) to obtain their degree in the following three training paths; <a href="https://openclassrooms.com/fr/paths/164-data-scientist">Data Scientist</a>, <a href="https://openclassrooms.com/fr/paths/324-data-analyst">Data Analyst</a>  and  <a href="https://openclassrooms.com/fr/paths/148-ingenieur-machine-learning"> Machine Learning Engineer </a> 
+        - Defenses participation in these last three paths
 
-    - title: Director
-      institution: Kaiser Wilhelm Institute for Physics, Berlin, Germany.
-      year: 1917-1933
+    - title: Research and Teaching Associate
+      institution: INSA de Rouen Normandie 
+      year: sep 2019 - aug 2021 
+      description :
+          - Teaching  Statistics, Machine Learning and mathematics (Algebra)
+          - Researcher at the <a href="https://www.insa-rouen.fr/recherche/laboratoires/litis">LITIS</a>  laboratory
+          - Supervising, Wei LU, a master 2 student in his graduation project. The project concerns parametric estimation applied to portfolio optimization in finance
 
-    - title: Professor of Theoretical Physics
-      institution: Karl-Ferdinand University, Prague, Czechoslovakia
-      year: 1911 - 1917
+    - title: Lead Manager
+      institution: <a href="https://www.linkedin.com/company/webuzz-agence-digitale/about/">WeBuzz</a>  
+      year: Dec 2015 - sep 2016
       description:
+          - Leading a team with a full stack developer, designer and a data analyst 
+          - Development of a commercial detection program in a live video with OpenCv
+          - Media data analysis and reporting
+          - Creating website and making advertisement on social networks for our costumers
 
-    - title: Associate Professor of Theoretical Physics
-      institution: University of Zurich, Zurich, Switzerland
-      year: 1909 - 1911
+    - title: Footwear Manufacturer
+      institution: Ramo chaussures 
+      year: sep 2014 - aug 2015
+      description :
+          - Management of men's shoe manufacturing (family business)
+          - Raw materials purchasing manager
 
-- title: Open Source Projects
+- title: SKILLS
   type: time_table
   contents:
-    - title: <a href="https://github.com/alshedivat/al-folio">al-folio</a>
-      year: 2015-now
-      description: A beautiful, simple, clean, and responsive Jekyll theme for academics.
+    - title: 
+      year:  Statistics
+      description:
+      - Inferential, descriptive and Bayesian statistics 
+      - Linear Algebra
+      - Time series
 
-- title: Honors and Awards
+    - title: 
+      year:         Data science
+      description:
+        - Supervised and unsupervised (Naive Bayes, Knn, ...)
+        - Clustering hierarchical, non-hierarchical, DBSCAN, ...
+        - Decision theory estimation        
+        - Regression multiple, ridge, lasso, ...
+        - Linear and non-linear dimension reduction (ACP, t-SNE, UMAP
+    - title: 
+      year: Computer Science
+      description:
+        - Data visualization; Tableau prep builder, Tableau desktop
+        - Programmation; Python (SpaCy, Pandas, Numpy, Keras, Scikit-learn, Matplotlib, OpenCv, ...), R and Matlab
+        - SQL data bases       
+        - Regression multiple, ridge, lasso, ...
+        - Development & Communications; Git, Github, MLflow, Docker, ...
+
+    - title: 
+      year : PERSONAL SKILLS
+      description: 
+        - Thoroughness and perseverance
+        - High capacity for analysis and synthesis
+        - Organized, dynamic, motivated and versatile
+
+    - title: 
+      year : Certifications
+      description: 
+        - <a href="https://verify.skilljar.com/c/ni643o64vkcv"> Tableau prep Builder</a>
+        - <a href="https://udemy-certificate.s3.amazonaws.com/pdf/UC-ee00c1c3-49a5-4f9d-ac42-279a7fd8b4fd.pdf">Data Science</a>
+
+
+
+- title: Interests
   type: time_table
   contents:
-    - year: 1921
-      items: 
-        - Nobel Prize in Physics 
-        - Matteucci Medal
-    - year: 2029
-      items: 
-        - Max Planck Medal
+    - title: 
+      year:  Academic
+      description:
+      - Shrinkage estimation 
+      - Covariance and scale matrices estimation on a theoretic decision point of view
+      - Portfolio optimization in Finance
 
-- title: Academic Interests
-  type: nested_list
-  contents:
-    - title: Topic 1.
-      items: 
-        - Description 1.
-        - Description 2.
-    - title: Topic 2.
-      items:
-        - Description 1.
-        - Description 2.
+    - title: 
+      year : Other
+      description: 
+        - I am a curious and passionate person interested in data sciences new things
+        - I am also passionate about cinema, soccer, new technologies and video-games
 
-- title: Other Interests
-  type: list
-  contents:
-    - <u>Hobbies:</u> Hobby 1, Hobby 2, etc.
+# - title: Skills
+#   type: nested_list
+#   contents:
+# - title: Open Source Projects
+#   type: time_table
+#   contents:
+#     - title: <a href="https://github.com/alshedivat/al-folio">al-folio</a>
+#       year: 2015-now
+#       description: A beautiful, simple, clean, and responsive Jekyll theme for academics.
+
+# - title: Honors and Awards
+#   type: time_table
+#   contents:
+#     - year: 1921
+#       items: 
+#         - Nobel Prize in Physics 
+#         - Matteucci Medal
+#     - year: 2029
+#       items: 
+#         - Max Planck Medal
+    # - title: Artificial intelligence 
+    #   items: 
+    #     - Supervised and unsupervised (Naive Bayes, Knn, ...)
+    #     - Clustering hierarchical, non-hierarchical, DBSCAN, ...
+    #     - Decision theory estimation        
+    #     - Regression multiple, ridge, lasso, ...
+    #     - Linear and non-linear dimension reduction (ACP, t-SNE, UMAP)
+
+    # - title: Computer Science
+    #   items: 
+    #     - Data visualization; Tableau prep builder, Tableau desktop
+    #     - Programmation; Python (SpaCy, Pandas, Numpy, Keras, Scikit-learn, Matplotlib, OpenCv, ...), R and Matlab
+    #     - SQL data bases       
+    #     - Regression multiple, ridge, lasso, ...
+    #     - Development & Communications; Git, Github, MLflow, Docker, ...
+
+
+    # - title: PERSONAL SKILLS
+    #   items: 
+    #     - Thoroughness and perseverance
+    #     - High capacity for analysis and synthesis
+    #     - Organized, dynamic, motivated and versatile
+
+    # - title: Certifications
+    #   items: 
+    #     - <a href="https://verify.skilljar.com/c/ni643o64vkcv"> Tableau prep Builder</a>
+    #     - <a href="https://udemy-certificate.s3.amazonaws.com/pdf/UC-ee00c1c3-49a5-4f9d-ac42-279a7fd8b4fd.pdf">Data Science</a>
